--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ postgres = { default-features = false, optional = true, version = "0.19" }
 serde = { default-features = false, optional = true, version = "1.0" }
 serde_json = { default-features = false, optional = true, version = "1.0" }
 tokio-postgres = { default-features = false, optional = true, version = "0.7" }
+hdf5 = { optional = true, version = "0.7.1" }
 
 [dev-dependencies]
 bincode = "1.3"
@@ -51,6 +52,7 @@ serde-str = ["serde"]
 serde-arbitrary-precision = ["serde", "serde_json/arbitrary_precision"]
 std = ["arrayvec/std"]
 tokio-pg = ["db-tokio-postgres"] # Backwards compatability
+hdf5-derive = ["hdf5"]
 
 [workspace]
 members = [".", "./macros"]
